// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`belongs to relationship, has many relationship 1`] = `
"table:
  name: projects
  schema: public
object_relationships:
  - name: user
    using:
      manual_configuration:
        column_mapping:
          user_id: id
        insertion_order: null
        remote_table:
          name: users
          schema: public
array_relationships:
  - name: tasks
    using:
      manual_configuration:
        column_mapping:
          id: project_id
        insertion_order: null
        remote_table:
          name: tasks
          schema: public
"
`;

exports[`class to tracked table, has one relationship 1`] = `
"table:
  name: users
  schema: public
object_relationships:
  - name: project
    using:
      manual_configuration:
        column_mapping:
          id: user_id
        insertion_order: null
        remote_table:
          name: projects
          schema: public
"
`;

exports[`write all tables file 1`] = `
"- '!include public_tasks.yaml'
- '!include public_users.yaml'
"
`;
